- add timezone to cronschedule

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -6,6 +6,7 @@ if (cronSchedule.count > 0)
 {
 	cronSchedule = cronSchedule[0].replaceAll("(?<=\\D)(?=\\d)"," ");
 	cronSchedule += " * * *"
+	cronSchedule = "TZ=Europe/Sofia\n" + cronSchedule
 }
 else
 {
