--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -201,7 +201,7 @@ def runTests(device)
 
 			def and = Include_Tags != '' && Exclude_Tags != '' ? " && " : ''
 			def where = Include_Tags != '' || Exclude_Tags != '' ? "-where" : ''
-			def quote = Include_Tags != '' || Exclude_Tags != '' ? "'" : ''
+			def quote = Include_Tags != '' || Exclude_Tags != '' ? "\"" : ''
 
       print "Including tags:  ${Include_Tags}"
 			print "Excluding tags:  ${Exclude_Tags}"
