--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -369,6 +369,7 @@
     <Compile Include="PageObjects\CalendarDays\DayColumn\MealPeriodDetails\RecipeDetails\Ingredient.cs" />
     <Compile Include="PageObjects\CalendarDays\DayColumn\MealPeriodDetails\RecipeSearch\BuffetItem.cs" />
     <Compile Include="Support\Helpers\DisposeDriverervice.cs" />
+    <Compile Include="Support\AppiumHooks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
