- update config files - update webDriver package version

--- a/MenuCycle.Tests/App.iPadAir.config
+++ b/MenuCycle.Tests/App.iPadAir.config
@@ -2,7 +2,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
   </appSettings>
-  <fourth driverType="iOS" serverUrl="http://10.0.70.8:4545/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="http://localhost:4550/wd/hub/" xdt:Transform="Replace">
     <capabilities>
       <add key="deviceName" value="iPad"/>
       <add key="platformVersion" value="11.2"/>
