--- a/MenuCycle.Tests/App.iPadPro9.config
+++ b/MenuCycle.Tests/App.iPadPro9.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="iOS" serverUrl="http://10.0.70.8:4547/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="http://localhost:4547/wd/hub/" xdt:Transform="Replace">
     <capabilities>
       <add key="deviceName" value="iPadPro" />
       <add key="platformVersion" value="11.4" />
@@ -11,6 +11,9 @@
       <add key="platformName" value="iOS" />
       <add key="xcodeOrgId" value="DK2MYTAD7Z" />
       <add key="xcodeSigningId" value="iPhone Developer" />
+      <add key="startIWDP" value="true" />
+      <add key="noReset" value="true" />
+      <add key="locationServicesAuthorized" value="true" />
       <add key="autoWebview" value="true" />
       <add key="useNewWDA" value="true" />
       <add key="bundleId" value="com.fourth.qa" />
