--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -18,10 +18,10 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
   <package id="Polly" version="6.0.1" targetFramework="net471" />
-  <package id="Selenium.Chrome.WebDriver" version="2.40" targetFramework="net471" />
-  <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net471" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.41.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.21.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net471" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net471" />
