--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -18,6 +18,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
   <package id="Polly" version="6.0.1" targetFramework="net471" />
+  <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net471" />
   <package id="Selenium.Support" version="3.12.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.42.0.1" targetFramework="net471" />
