--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net471" />
+  <package id="Appium.WebDriver" version="4.0.0.1-beta" targetFramework="net471" />
   <package id="Autofac" version="4.6.2" targetFramework="net471" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
@@ -18,7 +18,6 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
   <package id="Polly" version="6.0.1" targetFramework="net471" />
-  <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net471" />
   <package id="Selenium.Support" version="3.12.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.42.0.1" targetFramework="net471" />
