- add serial to Nexus 7 config

--- a/MenuCycle.Tests/App.Nexus7.config
+++ b/MenuCycle.Tests/App.Nexus7.config
@@ -17,6 +17,7 @@
       <add key="browserName" value="Nexus7"/>
       <add key="version" value="6.0.1"/>
       <add key="platform" value="Android"/>
+      <add key="serial" value="0a73000c"/>
     </capabilities>
   </fourth>
 </configuration>
