--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -54,12 +54,13 @@
   <plugins>
     <add name="SpecFlow.Autofac" type="Runtime"/>
   </plugins>
-<!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
+<!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+</specFlow>
 <fourth driverType="" serverUrl="" driverDirectory="">
-<reporting keepScreenshot="false" takeScreenshotOnError="false"/>
-<timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
-<capabilities>
-</capabilities>
+    <reporting keepScreenshot="false" takeScreenshotOnError="false"/>
+    <timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
+    <capabilities>
+    </capabilities>
 </fourth>
 <log4net>
 <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
