--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -23,13 +23,13 @@
   <package id="Selenium.WebDriver.ChromeDriver" version="2.43.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.GeckoDriver" version="0.23.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net471" />
-  <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
+  <package id="SlowMonkey" version="1.1.1" targetFramework="net471" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net471" />
   <package id="SpecFlow.Assist.Dynamic" version="1.3.1" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
-  <package id="System.Console" version="4.3.1" targetFramework="net462" />x
+  <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Data.SqlClient" version="4.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net471" />
