--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow"/>
@@ -57,10 +57,10 @@
 <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
 </specFlow>
 <fourth driverType="" serverUrl="" driverDirectory="">
-    <reporting keepScreenshot="false" takeScreenshotOnError="false"/>
-    <timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
-    <capabilities>
-    </capabilities>
+<reporting keepScreenshot="false" takeScreenshotOnError="false"/>
+<timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
+<capabilities>
+</capabilities>
 </fourth>
 <log4net>
 <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
