--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -6,9 +6,9 @@
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
   <package id="Dynamitey" version="2.0.9.136" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Core" version="4.0.33" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Mobile" version="4.0.33" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Reporting" version="4.0.33" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Core" version="4.1.55" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Mobile" version="4.1.55" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Reporting" version="4.1.55" targetFramework="net471" />
   <package id="FourthApp.Pages" version="1.0.2" targetFramework="net471" />
   <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
@@ -18,16 +18,17 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
   <package id="Polly" version="6.0.1" targetFramework="net471" />
-  <package id="Selenium.Support" version="3.12.1" targetFramework="net471" />
-  <package id="Selenium.WebDriver" version="3.12.1" targetFramework="net471" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.43.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.GeckoDriver" version="0.23.0" targetFramework="net471" />
-  <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver.IEDriver" version="3.141.0" targetFramework="net471" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net471" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net471" />
   <package id="SpecFlow.Assist.Dynamic" version="1.3.1" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Data.SqlClient" version="4.5.0" targetFramework="net471" />
@@ -42,6 +43,7 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net471" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
@@ -53,10 +55,16 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net471" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net471" />
 </packages>
