--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -67,4 +67,5 @@
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net471" />
+  <package id="System.Json" version="4.5.0" targetFramework="net471" />
 </packages>
